WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70081
REGRESSION (Safari 5.1 - 5.1.1): CSS nesw-resize cursor shows up as a sw-resize cursor
https://bugs.webkit.org/show_bug.cgi?id=70081
Summary
REGRESSION (Safari 5.1 - 5.1.1): CSS nesw-resize cursor shows up as a sw-resi...
Kevin Haggerty
Reported
2011-10-13 18:21:50 PDT
Adding this CSS to an element: .resize { cursor: nesw-resize; } does not work as expected. Cursor actually shows up as a sw-resize cursor. the nwse-resize cursor is unaffected, and shows up as expected.
Attachments
Add attachment
proposed patch, testcase, etc.
Kevin Haggerty
Comment 1
2011-10-14 04:14:30 PDT
Tested this in Safari 5.1 (MacOS 10.7) and nesw-resize works as expected. This bug only shows up in the latest webkit nightly.
Alexey Proskuryakov
Comment 2
2011-10-14 10:56:28 PDT
This is due to a typo in WebKitSystemInterface changes for <
http://trac.webkit.org/changeset/90087
>. Safari 5.1.1 on Lion is affected.
Darin Adler
Comment 3
2011-10-14 11:25:46 PDT
Oops.
Darin Adler
Comment 4
2011-10-14 11:26:32 PDT
I could have sworn I tested those all!
mitz
Comment 5
2011-10-14 11:32:05 PDT
<
rdar://problem/10288112
>
mitz
Comment 6
2011-10-14 12:17:52 PDT
Fixed in <
http://trac.webkit.org/r97490
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug