REGRESSION (Safari 5.1 - 5.1.1): CSS nesw-resize cursor shows up as a sw-resize cursor https://bugs.webkit.org/show_bug.cgi?id=70081

Reviewed by Anders Carlsson.

* WebKitSystemInterface.h: Unrelated change, perhaps needed for bug 68478.
* libWebKitSystemInterfaceLeopard.a:
* libWebKitSystemInterfaceLion.a:
* libWebKitSystemInterfaceSnowLeopard.a:



git-svn-id: svn://svn.chromium.org/blink/trunk@97490 bbb929c8-8fbe-4397-9dbb-9b2b20218538